@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2017-11-23] improved timing attack resilience of mpz_spowm()
 * [2017-11-23] RFC4880: added return code 0xFE for non-fatal errors in PacketDecode()
 * [2017-11-22] RFC4880: fixes a buffer overflow in SubpacketDecode()
 * [2017-11-22] RFC4880: added V3 signature packets for PacketDecode()
